// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Верстка компонента <H> Второго уровня 1`] = `
<span
  className="h h--size2"
>
  Header
</span>
`;

exports[`Верстка компонента <H> Дефолтная 1`] = `
<span
  className="h h--size1"
>
  Header
</span>
`;

exports[`Верстка компонента <H> Первого уровня 1`] = `
<span
  className="h h--size1"
>
  Header
</span>
`;

exports[`Верстка компонента <H> Пятого уровня 1`] = `
<span
  className="h h--size5"
>
  Header
</span>
`;

exports[`Верстка компонента <H> Третьего уровня 1`] = `
<span
  className="h h--size3"
>
  Header
</span>
`;

exports[`Верстка компонента <H> Четвертого уровня 1`] = `
<span
  className="h h--size4"
>
  Header
</span>
`;

exports[`Верстка компонента <H> Шестого уровня 1`] = `
<span
  className="h h--size6"
>
  Header
</span>
`;
